crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_expr_arithmetic.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN n.price * n.quantity + n.tax AS total\")"
---
MATCH (n)
RETURN n.price * n.quantity + n.tax AS total
