crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_expr_comparison_chain.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) WHERE n.age >= 18 AND n.age <= 65 RETURN n\")"
---
MATCH (n)
WHERE n.age >= 18 AND n.age <= 65
RETURN n
