crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_expr_function_call_multi_arg.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN substring(n.name, 0, 5)\")"
---
MATCH (n)
RETURN substring(n.name, 0, 5)
