crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_expr_function_call_single_arg.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN toLower(n.name)\")"
---
MATCH (n)
RETURN toLower(n.name)
