crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_expr_is_not_null.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) WHERE n.email IS NOT NULL RETURN n\")"
---
MATCH (n)
WHERE n.email IS NOT NULL
RETURN n
