crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_expr_is_null.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) WHERE n.email IS NULL RETURN n\")"
---
MATCH (n)
WHERE n.email IS NULL
RETURN n
