crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_expr_list_literal.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"RETURN [1, 2, 3, 4, 5] AS nums\")"
---
RETURN [1, 2, 3, 4, 5] AS nums
