crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_expr_map_literal.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"RETURN {name: 'Alice', age: 30} AS person\")"
---
RETURN {name: 'Alice', age: 30} AS person
