crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_expr_nested_and_or.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) WHERE (n.a > 1 AND n.b < 10) OR (n.c = 'x' AND n.d IS NOT NULL) RETURN n\")"
---
MATCH (n)
WHERE (n.a > 1 AND n.b < 10) OR (n.c = 'x' AND n.d IS NOT NULL)
RETURN n
