crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_expr_nested_function_calls.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN toLower(trim(n.name))\")"
---
MATCH (n)
RETURN toLower(trim(n.name))
