crates/cypher-fmt/src/snapshots/cypher_fmt__corpus__snap_expr_not.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) WHERE NOT n.active = false RETURN n\")"
---
MATCH (n)
WHERE NOT n.active = FALSE
RETURN n
